# python-pfconclient

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  req_resp_flow.md  setup.py
pfconclient/: client.py  request.py
pfconclient/tests/: test_client.py
src/pfconclient/: __main__.py  client.py
tests/: test_client.py
